--- a/css/index.css
+++ b/css/index.css
@@ -118,7 +118,7 @@ body {
 
 .img1part1::after {
   content: "Bill Mahoney";
-  position: absolute;
+
   bottom: 140px;
   left: 0;
   font-family: "Poppins", sans-serif;
@@ -150,7 +150,7 @@ body {
 
 .img2part2::after {
   content: "Saba Cabrera";
-  position: absolute;
+
   bottom: -33px;
   left: 0;
   font-family: "Poppins", sans-serif;
@@ -178,7 +178,7 @@ body {
 
 .img3part3::after {
   content: "Shae Le";
-  position: absolute;
+
   bottom: 140px;
   left: 0;
   font-family: "Poppins", sans-serif;
@@ -190,10 +190,10 @@ body {
 }
 
 .img4part4::before {
-  content: "Product owner";
+  content: "UX Designer";
   position: absolute;
-  right: -70px;
-  top: 47px;
+  right: -58px;
+  top: 35px;
   font-family: "PT Serif Caption", serif;
   font-style: normal;
   font-weight: 400;
@@ -205,8 +205,8 @@ body {
 }
 
 .img4part4::after {
-  content: "Bill Mahoney";
-  position: absolute;
+  content: "Skylah Lu";
+
   bottom: 134px;
   left: 0;
   font-family: "Poppins", sans-serif;
@@ -222,10 +222,10 @@ body {
 }
 
 .img5part5::before {
-  content: "Art director";
+  content: "Developer";
   position: absolute;
-  right: -60px;
-  top: 38px;
+  right: -53px;
+  top: 30px;
   font-family: "PT Serif Caption", serif;
   font-style: normal;
   font-weight: 400;
@@ -237,8 +237,8 @@ body {
 }
 
 .img5part5::after {
-  content: "Saba Cabrera";
-  position: absolute;
+  content: "Griff Richards";
+
   bottom: -36px;
   left: 0;
   font-family: "Poppins", sans-serif;
@@ -250,10 +250,10 @@ body {
 }
 
 .img6part6::before {
-  content: "Tech Lead";
+  content: "DEverloper";
   position: absolute;
-  right: -49px;
-  top: 28px;
+  right: -57px;
+  top: 33px;
   font-family: "PT Serif Caption", serif;
   font-style: normal;
   font-weight: 400;
@@ -265,8 +265,8 @@ body {
 }
 
 .img6part6::after {
-  content: "Shae Le";
-  position: absolute;
+  content: "Stan John";
+
   bottom: 135px;
   left: 0;
   font-family: "Poppins", sans-serif;
@@ -400,6 +400,9 @@ body {
 /* ///////////////////////////////////////  Media 768px */
 
 @media (max-width: 768px) {
+  .containerFA {
+    padding: 0px 30px 0 10px;
+  }
   .containerheader {
     justify-content: space-evenly;
     flex-direction: column;
@@ -449,32 +452,40 @@ body {
 
   .img1part1 {
     max-width: 138.72px;
+    margin: 0 auto;
   }
   .img2part2 {
     /* max-width: 177.42px; */
     max-width: 138.72px;
-    top: -100px;
+    top: 66px;
+    margin: 0 auto;
   }
   .img3part3 {
     /* max-width: 175.68px; */
     max-width: 138.72px;
-    top: -101px;
+    top: 21px;
+    margin: 0 auto;
   }
 
   .img4part4 {
     /* max-width: 162.27px; */
     max-width: 138.72px;
-    top: -40px;
+    top: 86px;
+
+    margin: 0 auto;
   }
   .img5part5 {
     /* max-width: 160.24px; */
     max-width: 138.72px;
-    top: -220px;
+    top: 37px;
+    margin: 0 auto;
   }
   .img6part6 {
     /* max-width: 197.42px; */
     max-width: 138.72px;
-    top: 42px;
+    top: 121px;
+
+    margin: 0 auto;
   }
 
   .img1part1 .img1,
@@ -498,6 +509,23 @@ body {
   }
 
   .footer {
-    margin-top: 50px;
+    margin-top: 0;
+    padding-top: 134px;
+  }
+}
+
+@media (max-width: 354px) {
+  .img1part1,
+  .img2part2,
+  .img3part3,
+  .img4part4,
+  .img5part5,
+  .img6part6 {
+    top: 0;
+  }
+
+  .footer {
+    padding-top: 90px;
+    text-align: center;
   }
 }
